@@ -1,3 +1,9 @@
+2005-03-27 Toady <toady@gscore.org>
+
+	* plugins/abc/export-abc.c: Improved chords support
+	* src/mouse_event.c: Improved objects on staff selection
+	* src/objects.c: Improved movements within score to avoid issues with chords
+	
 2005-03-25 Toady <toady@gscore.org>
 
 	* src/objects_callbacks.c: Sets/Uset stuff on objects selected
